<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Clip Mobile</string>
    <string name="provider_authority">com.migueljteixeira.clipmobile.provider</string>
    <string name="refreshing">A actualizar&#8230;</string>

    <!-- Actionbar -->
    <string name="menu_overflow">Mais opções</string>
    <string name="menu_refresh">Actualizar</string>
    <string name="menu_about">Sobre</string>
    <string name="menu_logout">Mudar de Conta</string>
    <string name="menu_export_calendar">Exportar Calendário</string>
    <string name="menu_select_semester">Seleccionar semestre</string>
    <string name="menu_semester_1">1º Semestre</string>
    <string name="menu_semester_2">2º Semestre</string>
    <string name="menu_trimester_2">2º Trimestre</string>

    <!-- Connection issues -->
    <string name="connection_failed">A ligação falhou\nTente novamente mais tarde</string>

    <!-- ConnectClip Activity -->
    <string name="hint_username">Identificador</string>
    <string name="hint_password">Password</string>
    <string name="action_login">Submeter</string>
    <string name="error_fields_required">Campo Obrigatório</string>
    <string name="error_fields_incorrect">Autenticação Inválida</string>

    <!-- StudentNumbers Activity -->
    <string name="students_available">Números de aluno\ndisponíveis</string>
    <string name="years_available">Anos disponíveis</string>

    <!-- NavDrawer Activity -->
    <string name="drawer_schedule">Horário</string>
    <string name="drawer_calendar">Calendário</string>
    <string name="drawer_classes">Cadeiras</string>
    
    <string name="drawer_info_title">Faculdade</string>
    <string name="drawer_info_map">Planta do Campus</string>
    <string name="drawer_info_contacts">Contactos</string>


    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- Schedule Fragment -->
    <string name="schedule_no_classes">Sem aulas</string>
    <array name="schedule_tab_array">
        <item>Segunda</item>
        <item>Terça</item>
        <item>Quarta</item>
        <item>Quinta</item>
        <item>Sexta</item>
    </array>

    <string name="schedule_class_start">Início:</string>
    <string name="schedule_class_end">Fim:</string>
    <string name="schedule_class_type">Turno:</string>
    <string name="schedule_class_room">Sala:</string>

    <!-- Classes/Calendar Fragment -->
    <string name="categories_available">Categorias disponíveis</string>
    <array name="classes_docs_array">
        <item>Acetatos</item>
        <item>Problemas</item>
        <item>Protocolos</item>
        <item>Seminários</item>
        <item>Exames</item>
        <item>Testes</item>
        <item>Textos de Apoio</item>
        <item>Outros</item>
    </array>

    <array name="classes_docs_type_array">
        <item>0ac</item>
        <item>1e</item>
        <item>2tr</item>
        <item>3sm</item>
        <item>ex</item>
        <item>t</item>
        <item>ta</item>
        <item>xot</item>
    </array>

    <array name="semester_tab_array">
        <item>1º Semestre</item>
        <item>2º Semestre</item>
    </array>

    <array name="exams_tests_tab_array">
        <item>Testes</item>
        <item>Exames</item>
    </array>

    <!-- Info Contacts Fragment -->
    <string name="info_contacts_phone">Telefone:</string>
    <string name="info_contacts_schedule">Horário:</string>

    <string name="info_contacts_internal_title">Contactos Internos</string>
    <string name="info_contacts_external_title">Contactos Externos</string>

    <array name="info_contacts_internal">
        <item>Duplix</item>
        <item>212 952 971</item>
        <item>09:00 - 19:00</item>

        <item>Papelaria Solução</item>
        <item>927 532 763</item>
        <item>08:30 - 00:00</item>

        <item>Livraria Escolar Editora</item>
        <item>212 946 367</item>
        <item>09:00 - 19:00</item>

        <item>Caixa Geral de Depósitos</item>
        <item>212 946 200</item>
        <item>08:30 - 15:00</item>

        <item>Agência de Viagens Abreu</item>
        <item>213 596 170</item>
        <item>-</item>
    </array>

    <array name="info_contacts_external">
        <item>Polícia de Segurança Pública</item>
        <item>212 746 558</item>

        <item>Guarda Nacional Republicana</item>
        <item>212 942 639</item>

        <item>Hospital Garcia de Orta</item>
        <item>212 727 100</item>

        <item>Bombeiros Voluntários da Trafaria</item>
        <item>212 950 093</item>

        <item>Auto Estrela Almadense (Táxis)</item>
        <item>212 509 660 / 964 991 580 / 939 483 484 / 917 064 142</item>

        <item>Ratalma (Táxis)</item>
        <item>212 947 070 / 967 373 400 / 917 253 636</item>
    </array>

    <!-- About dialog Fragment -->
    <string name="about_developer_title">Developer</string>
    <string name="about_developer_name">Miguel Teixeira</string>
    <string name="about_logo_designer_title">Logo Designer</string>
    <string name="about_logo_designer_name">João Coxixo</string>
    <string name="about_advisor_title">Advisor</string>
    <string name="about_advisor_name">Ricardo Carrapiço</string>

</resources>
