<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:com.migueljteixeira.clipmobile="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/ic_action_go_to_today"
        android:orderInCategory="1"
        com.migueljteixeira.clipmobile:showAsAction="ifRoom"
        android:title="@string/menu_select_semester">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/semester1"
                    android:checked="true"
                    android:orderInCategory="1"
                    com.migueljteixeira.clipmobile:showAsAction="never"
                    android:title="@string/menu_semester_1" />

                <item
                    android:id="@+id/semester2"
                    android:orderInCategory="2"
                    com.migueljteixeira.clipmobile:showAsAction="never"
                    android:title="@string/menu_semester_2" />
            </group>
        </menu>
    </item>

</menu>
