<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/developer_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/about_developer"/>

        <TextView
            android:id="@+id/developer_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/about_developer_title"
            android:textColor="@color/main_color_dark"
            android:textSize="@dimen/default_text_size"
            android:layout_toRightOf="@+id/developer_image"
            android:layout_toEndOf="@+id/developer_image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_developer_name"
            android:textSize="@dimen/default_text_size"
            android:layout_below="@+id/developer_title"
            android:layout_toRightOf="@+id/developer_image"
            android:layout_toEndOf="@+id/developer_image" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/icon_designer_title"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="20dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:src="@drawable/about_designer"/>

        <TextView
            android:id="@+id/icon_designer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/about_logo_designer_title"
            android:textColor="@color/main_color_dark"
            android:textSize="@dimen/default_text_size"
            android:layout_toRightOf="@+id/icon_designer_title"
            android:layout_toEndOf="@+id/icon_designer_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_logo_designer_name"
            android:textSize="@dimen/default_text_size"
            android:layout_below="@+id/icon_designer_name"
            android:layout_toRightOf="@+id/icon_designer_title"
            android:layout_toEndOf="@+id/icon_designer_title" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/icon_advisor_title"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/about_advisor"/>

        <TextView
            android:id="@+id/icon_advisor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/about_advisor_title"
            android:textColor="@color/main_color_dark"
            android:textSize="@dimen/default_text_size"
            android:layout_toRightOf="@+id/icon_advisor_title"
            android:layout_toEndOf="@+id/icon_advisor_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_advisor_name"
            android:textSize="@dimen/default_text_size"
            android:layout_below="@+id/icon_advisor_name"
            android:layout_toRightOf="@+id/icon_advisor_title"
            android:layout_toEndOf="@+id/icon_advisor_title" />

    </RelativeLayout>

</LinearLayout>
