<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Progress Spinner -->
    <FrameLayout
        android:id="@+id/progress_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginTop="@dimen/activity_login_marginTop"
        android:visibility="gone">

        <fr.castorflex.android.circularprogressbar.CircularProgressBar
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:indeterminate="true"
            app:cpb_colors="@array/spinner_colors"
            app:cpb_rotation_speed="0.8"
            app:cpb_sweep_speed="0.6"
            app:cpb_stroke_width="5dp"
            app:cpb_min_sweep_angle="10"
            app:cpb_max_sweep_angle="300" />
    </FrameLayout>

    <!-- Login form -->
    <FrameLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:background="#e7e8e9"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/card_background"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="@dimen/activity_login_marginTop"
            android:layout_marginLeft="@dimen/activity_login_marginLeft"
            android:layout_marginRight="@dimen/activity_login_marginRight"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:hint="@string/hint_username"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="@dimen/text_size"
                android:hint="@string/hint_password"
                android:fontFamily="sans-serif"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <Button
                android:id="@+id/log_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:paddingLeft="32dp"
                android:textSize="@dimen/text_size"
                android:paddingRight="32dp"
                android:text="@string/action_login" />

        </LinearLayout>

    </FrameLayout>

</FrameLayout>
